# Radiance

./: .gitmodules  CMakeLists.txt  README.md
assets/: ballistic.rc  ballistic_console.rc
assets/icons/: radiance_console.rc
assets/shaders/: raytrace.comp
cmake/: EmbedAssets.cmake  Platform.cmake
engine/: CMakeLists.txt
engine/application/: application.cpp  application.h  main.cpp
engine/opengl/: opengl.h
engine/opengl/buffer/: storage_buffer.cpp  storage_buffer.h  uniform_buffer.cpp  uniform_buffer.h
engine/opengl/image/: framebuffer.cpp  framebuffer.h  image.cpp  image.h
engine/opengl/shader/: shader_program.cpp  shader_program.h
engine/platform/embedded/: embedded_asset.cpp  embedded_asset.h
engine/platform/imgui/: imgui_layer.cpp  imgui_layer.h
engine/platform/stub/: console_stub.cpp
engine/platform/window/: window.cpp  window.h
engine/renderer/: renderer.cpp  renderer.h
engine/scene/: scene.h
